--- a/drmemory/docs/tools.dox
+++ b/drmemory/docs/tools.dox
@@ -19,6 +19,8 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
+/* XXX: if you add new tools here, also edit DR's api/docs/tool.gendox */
+
 /**
  ****************************************************************************
  ****************************************************************************
