- add options.c to frontend for better options checks in frontend - rename option -stderr to -use_stderr
R=bruening@google.com
BUG=NONE

Review URL: https://codereview.appspot.com/127420043

SVN-Revision: 2044

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -80,6 +80,7 @@ The changes between \TOOL_VERSION and version 1.7.0 include:
    "UNADDRESSABLE ACCESS of freed memory",
    "UNADDRESSABLE ACCESS beyond heap bounds", and
    "UNADDRESSABLE ACCESS beyond top of stack".
+ - Renamed option -stderr to -use_stderr.
 
 The changes between version 1.7.0 and version 1.6.1 include:
  - Added a Beta version of Dr. Memory for Mac.  Be aware that this
