--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -63,6 +63,8 @@ The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.7.0 include:
  - Dropped official support for Windows 2000.
  - Enabled -delay_frees_stack by default.
+ - The Windows installer now automatically adds Dr. Memory as an External
+   Tool for every installation of Visual Studio on the machine.
  - Changed details of the callstack maximum frame options.
    Added two new options: -malloc_max_frames, used for leak reports (and
    mismatch aux info), and -free_max_frames, used for -delay_frees_stack.
