i#111 x64: handle Umbra using page faults for lazy shadow allocation.
Marks all shadow memory de-refs in Dr. Memory (various compares and loads)
with translations using a new xl8 field in fastpath_info_t.  Updates
existing code to use the field.

Updates the Umbra docs to make it clear the user must use translations.

Additionally, umbra_get_shadow_memory_arch() does not lazily allocate
(unlike umbra_{read,write}_shadow_memory_arch()) and we can fault.  Handles
this by returning unaddr on get and explicitly allocating on set.  Updates
the Umbra docs on this as well.

Updates Dr. Heapstat to skip meta instrs to avoid crashes due to NULL
translations.

SVN-Revision: 2083

--- a/umbra/umbra.dox
+++ b/umbra/umbra.dox
@@ -93,4 +93,8 @@ without knowing the actual shadow memory address or how shadow memory is managed
 Advanced users can create "special" shadow memory (read-only memory region with
 default value) or directly access shadow memory for better performanc and memory usage.
 
+Umbra may use page faults to implement lazy shadow memory allocation.  When
+generating meta instructions to read shadow values, be sure to assign
+translation values to the instructions.
+
 */
