i#1641: umbra x64 wild address memory handling problems
Changes umbra routines to return a new error code
DRMF_ERROR_INVALID_ADDRESS to indicate an invalid app address for which
there is no supported shadow, rather than the old DRMF_ERROR_NOMEM.  Adds
explicit general and per-routine documentation about this.

Adds handling of UMBRA_SHADOW_MEMORY_TYPE_NOT_SHADOW in Dr. Memory shadow
get and set routines (set has to abort: xref i#1640) to fix crashes.

Adds tests of wild x64 addresses to the syscalls_* test apps.

Does not yet solve the instrumentation aspect of this issue.

SVN-Revision: 2092

--- a/umbra/umbra.dox
+++ b/umbra/umbra.dox
@@ -97,4 +97,10 @@ Umbra may use page faults to implement lazy shadow memory allocation.  When
 generating meta instructions to read shadow values, be sure to assign
 translation values to the instructions.
 
+Some shadow mapping schemes do not support shadow memory for invalid
+application addresses (i.e., addresses for which no application memory is
+allocated).  If such application addresses are passed to shadow API
+routines, they will fail with #DRMF_ERROR_INVALID_ADDRESS, while shadow
+memory type queries will indicate #UMBRA_SHADOW_MEMORY_TYPE_NOT_SHADOW.
+
 */
