--- a/README
+++ b/README
@@ -82,10 +82,10 @@ http://groups.google.com/group/drmemory-users/ to ask questions and seek
 help on using Dr. Memory.
 
 Dr. Memory's source code and issue tracker live at
-http://code.google.com/p/drmemory/
+https://github.com/DynamoRIO/drmemory
 
 If you would like to submit a patch, you will need to first sign a
 Contributor License Agreement.  See
-http://code.google.com/p/drmemory/wiki/Contributing for more information.
+https://github.com/DynamoRIO/drmemory/wiki/Contributing for more information.
 
 ===========================================================================
