--- a/drmemory/docs/main.dox
+++ b/drmemory/docs/main.dox
@@ -83,7 +83,7 @@ following sections:
 
 - \ref page_license
 
-See the Dr. Memory project homepage at http://code.google.com/p/drmemory/
+See the Dr. Memory homepage at http://drmemory.org
 for source code and the latest release.
 
 ****************************************************************************
@@ -105,7 +105,7 @@ href="http://groups.google.com/group/drmemory-users/">Dr. Memory Users
 group</a>.
 
 The Dr. Memory issue tracker is located at:
-http://code.google.com/p/drmemory/issues/list
+http://drmemory.org/issues
 
 If a problem in the Dr. Memory tool itself is encountered, try the
 following steps to help diagnose the issue:
