--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2010-2014 Google, Inc.  All rights reserved.
+ * Copyright (c) 2010-2015 Google, Inc.  All rights reserved.
  * Copyright (c) 2009-2010 VMware, Inc.  All rights reserved.
  * **********************************************************/
 
@@ -60,6 +60,9 @@ The Dr. Memory distribution contains the following:
 \section sec_changes Changes Since Prior Releases
 
 The current version is \TOOL_VERSION.
+The changes between \TOOL_VERSION and version 1.8.0 include:
+ - Added support for Mac OSX Yosemite.
+
 The changes between \TOOL_VERSION and version 1.7.0 include:
  - Dropped official support for Windows 2000.
  - Enabled -delay_frees_stack by default.
