i#1734 create Dr. Fuzz: add the drfuzz module
Add the public module of the Dr. Fuzz feature. This CL
contains only the init and exit routines, along with the
basic build configuration and updates to the license
and release notes.

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -62,6 +62,8 @@ The Dr. Memory distribution contains the following:
 The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.8.0 include:
  - Added support for Mac OSX Yosemite.
+ - Added Dr. Fuzz, a fuzz testing framework that facilitates repeated
+   execution of any program function while mutating the arguments.
 
 The changes between \TOOL_VERSION and version 1.7.0 include:
  - Dropped official support for Windows 2000.
