i#1734 Create Dr. Fuzz: save/restore shadow memory
Integrates the fuzzer with full Dr. Memory by
saving and restoring shadow memory during the
fuzzing cycle. Adds 12 tests that leak memory or
read or write unaddressable or uninitialized data.

Depends on DynamoRIO 5.0.16772.

Review-URL: https://codereview.appspot.com/261980043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -63,7 +63,9 @@ The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.8.0 include:
  - Added support for Mac OSX Yosemite.
  - Added Dr. Fuzz, a fuzz testing framework that facilitates repeated
-   execution of any program function while mutating the arguments.
+   execution of any program function while mutating the arguments. Use
+   new option -fuzz_target to fuzz test any C or C++ target function
+   having a buffer argument and a corresponding buffer size argument.
 
 The changes between \TOOL_VERSION and version 1.7.0 include:
  - Dropped official support for Windows 2000.
