i#1015: report unaddr warning on write-to-read-only
- add handle_possible_write_to_read_only to report write-to-read-only in shadow mode
- update pattern_handle_segv_fault to report write-to-read-only in pattern mode
- add option report_write_to_read_only to control the report

Fixes #1015

Review-URL: https://codereview.appspot.com/264940043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -69,6 +69,7 @@ The changes between \TOOL_VERSION and version 1.8.0 include:
  - Switched the Windows installer from an NSIS-based executable to
    a WIX-based .msi file.  The new installer automatically adds
    Dr. Memory to the PATH for the current user.
+ - Added unaddressable warning report on write-to-readonly-memory.
 
 The changes between \TOOL_VERSION and version 1.7.0 include:
  - Dropped official support for Windows 2000.
