i#1620 WIX integration: add DrMem to user PATH
The WIX installer now unconditionally (i#1761 covers adding checkboxes)
adds Dr. Memory to the user's PATH.  This *should* be auto-removed on
uninstall but that is not working: i#1762 covers fixing that.

This CL updates the docs to reflect the new automatic PATH editing.

The WIX installer now has enough of the features of the NSIS installer that
WIX support is declared complete.

Fixes #1620

Review-URL: https://codereview.appspot.com/265780043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -66,6 +66,9 @@ The changes between \TOOL_VERSION and version 1.8.0 include:
    execution of any program function while mutating the arguments. Use
    new option -fuzz_target to fuzz test any C or C++ target function
    having a buffer argument and a corresponding buffer size argument.
+ - Switched the Windows installer from an NSIS-based executable to
+   a WIX-based .msi file.  The new installer automatically adds
+   Dr. Memory to the PATH for the current user.
 
 The changes between \TOOL_VERSION and version 1.7.0 include:
  - Dropped official support for Windows 2000.
