--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2010-2014 Google, Inc.  All rights reserved.
+# Copyright (c) 2010-2015 Google, Inc.  All rights reserved.
 # Copyright (c) 2008-2009 VMware, Inc.  All rights reserved.
 # **********************************************************
 
@@ -34,8 +34,9 @@ memory leaks, and (on Windows) handle leaks, GDI API usage errors, and
 accesses to un-reserved thread local storage slots.
 
 Dr. Memory is based on the DynamoRIO binary translation engine.  Dr. Memory
-currently targets 32-bit Windows (XP and higher) and Linux, with early Mac
-OSX support available as a Beta release.  64-bit is coming soon.
+currently targets 32-bit programs on Windows (XP and higher) and Linux,
+with early Mac OSX support available as a Beta release.  64-bit application
+support is coming soon.
 
 Dr. Memory also includes a system call tracing tool for Windows and a
 symbol query utility.  Those tools are available for both 32-bit and 64-bit.
@@ -56,8 +57,11 @@ Quick start for Linux:
 --------------------------------------------------
 Quick start for Windows:
 
+If you used the installer, it added Dr. Memory to the current user's PATH,
+and a fresh shell should find the "drmemory" command:
+
 1) cl /Zi /MT /EHsc /Oy- /Ob0 /Femyapp.exe *.cpp
-2) bin\drmemory.exe -- myapp.exe args_to_my_app
+2) drmemory -- myapp.exe args_to_my_app
 
 --------------------------------------------------
 Quick start for Mac:
