Update docs for "ia32-libs" package
Updates the docs to explain that "ia32-libs" no longer exists, since Ubuntu
13.04.

Also updates the changelog version label for the prior 1.8.0 release, and
updates comments about i#1717.

Review-URL: https://codereview.appspot.com/265060043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -71,7 +71,7 @@ The changes between \TOOL_VERSION and version 1.8.0 include:
    Dr. Memory to the PATH for the current user.
  - Added unaddressable warning report on write-to-readonly-memory.
 
-The changes between \TOOL_VERSION and version 1.7.0 include:
+The changes between version 1.8.0 and version 1.7.0 include:
  - Dropped official support for Windows 2000.
  - Enabled -delay_frees_stack by default.
  - The Windows installer now automatically adds Dr. Memory as an External
