i#1734 Create Dr. Fuzz: Integrate drfuzz_mutator
Integrates the drfuzz_mutator into the Dr. Memory
fuzzer, adding command-line options for the
mutator descriptor, the random seed, and for
specifying a single input value (as a bug
checking utility). Adds a top-level doc entry
"Fuzz Mode" with full explanation of the new
options and the mutator's behavior. Adds new
tests for the various mutator modes.

Review-URL: https://codereview.appspot.com/265130043

--- a/drmemory/docs/main.dox
+++ b/drmemory/docs/main.dox
@@ -62,6 +62,9 @@ following sections:
 - \ref page_light
   <br>A lighter-weight mode for faster execution.
 
+- \ref page_fuzzer
+  <br>A fuzz testing mode.
+
 - \ref page_options
   <br>Dr. Memory Runtime Option Reference
 
