--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -63,9 +63,10 @@ The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.8.0 include:
  - Added support for Mac OSX Yosemite.
  - Added Dr. Fuzz, a fuzz testing framework that facilitates repeated
-   execution of any program function while mutating the arguments. Use
-   new option -fuzz_target to fuzz test any C or C++ target function
-   having a buffer argument and a corresponding buffer size argument.
+   execution of any program function while mutating the arguments.
+ - Added a fuzz testing mode to Dr. Memory. Use new options -fuzz_target
+   and -fuzz_mutator to fuzz test any C or C++ target function having a
+   buffer argument and a corresponding buffer size argument.
  - Switched the Windows installer from an NSIS-based executable to
    a WIX-based .msi file.  The new installer automatically adds
    Dr. Memory to the PATH for the current user.
