i#573,i#1636 annotations: add leak check annotation handling
Adds a handler for the VALGRIND_DO_LEAK_CHECK annotation, for use in our
tests.  Requires DR 4050f4f.

Review-URL: https://codereview.appspot.com/262490044

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -70,7 +70,8 @@ The changes between \TOOL_VERSION and version 1.8.0 include:
  - Switched the Windows installer from an NSIS-based executable to
    a WIX-based .msi file.  The new installer automatically adds
    Dr. Memory to the PATH for the current user.
- - Added unaddressable warning report on write-to-readonly-memory.
+ - Added an unaddressable warning report on a write to read-only memory.
+ - Added support for the VALGRIND_DO_LEAK_CHECK annotation.
 
 The changes between version 1.8.0 and version 1.7.0 include:
  - Dropped official support for Windows 2000.
